update documentation for not yet decomposed machines for 3.13

--- a/model/B-Systerel/Event_B/Section_3_13/latex/openetcs.bib
+++ b/model/B-Systerel/Event_B/Section_3_13/latex/openetcs.bib
@@ -38,12 +38,19 @@
 author = {{Matthias G\"udemann}},
 title = {{Event-B Model of Subset 026, Section 4.6}},
 year = {2013},
-howpublished {{openETCS}},
+howpublished = {{github - openETCS}},
 }
 
 @Misc{Section-3-5-Rodin,
 author = {{Matthias G\"udemann}},
 title = {{Event-B Model of Subset 026, Section 3.5}},
 year = {2013},
-howpublished {{openETCS}},
+howpublished = {{github - openETCS}},
+}
+
+@Misc{Section-5-9-Rodin,
+author = {{Matthias G\"udemann}},
+title = {{Event-B Model of Subset 026, Section 5.9}},
+year = {2013},
+howpublished = {{github - openETCS}},
 }
