updated documentation for model of section 3.13

--- a/model/B-Systerel/Event_B/Section_3_13/latex/openetcs.bib
+++ b/model/B-Systerel/Event_B/Section_3_13/latex/openetcs.bib
@@ -24,7 +24,7 @@
 }
 
 @article{silva2011decomposition,
-  title={Decomposition tool for event-B},
+  title={{Decomposition tool for event-B}},
   author={Silva, Renato and Pascal, Carine and Hoang, Thai Son and Butler, Michael},
   journal={Software: Practice and Experience},
   volume={41},
