RT-tester experiments section added

--- a/model/EA-SysML/doc/descriptionReport.tex
+++ b/model/EA-SysML/doc/descriptionReport.tex
@@ -1,4 +1,5 @@
 \documentclass[11pt,notitlepage]{article}
+\usepackage[utf8]{inputenc}
 \usepackage{geometry}                % See geometry.pdf to learn the layout options. There are lots.
 \geometry{a4paper}                   % ... or a4paper or a5paper or ... 
 %\geometry{landscape}                % Activate for for rotated page geometry
@@ -9,6 +10,7 @@
 \usepackage{booktabs}     %fancy tables
 \usepackage[english]{babel}
 \usepackage{ae,aecompl}   % best than T1 fontenc
+\usepackage{multicol}
 \geometry{reset,
   papersize={210mm,297mm},
   text={170mm,250mm},
